# agent_interop

./: README.md  app.yaml  client.py  config.yaml  databricks.yml  pyproject.toml  requirements.txt  server.py
agent_dock/: README.md
examples/agent_cards/: databricks_agent_card.json  example_agent_card.json  test_agent_card.json
notebooks/: agent_registration_validation.ipynb  mcp_a2a_walkthrough.ipynb  setup_lakebase.ipynb  setup_registry.ipynb  test_agent_a2a.ipynb
scripts/: register_agent_card.py  setup_registry.py
src/registry_app/: __init__.py  a2a_executor.py  config.py  db.py  http_api.py  llm_agent.py  loopback.py  mcp_client.py  mcp_registry.py  registry.py  schemas.py  server.py
src/registry_app/services/: __init__.py  a2a_client.py  a2a_executor.py  http_api.py  mcp_gateway.py  mcp_registry.py  test_agent.py
tests/: conftest.py  test_a2a_executor_unit.py  test_app_routes_unit.py  test_loopback_unit.py  test_mcp_gateway_unit.py  test_registry_api_unit.py  test_registry_integrations.py  test_registry_register_unit.py
